# maya-cmake

./: .gitignore  CMakeLists.txt  FindMaya.cmake  LICENSE  README.md
.github/workflows/: build.yml  build_examples.yml
cmake/modules/: FindMaya.cmake
examples/: CMakeLists.txt  maya-cmake.mod.in  plugin.cpp
test/: CMakeLists.txt  test.mod
